# Makefile.am -- Process this file with automake to produce Makefile.in

bin_SCRIPTS = generate_compile_commands

bin_PROGRAMS = bin2s padbin raw2c bmp2bin

bin2s_SOURCES	=	bin2s.c
padbin_SOURCES	=	padbin.c
raw2c_SOURCES	=	raw2c.c
bmp2bin_SOURCES	=	bmp2bin.cpp

CLEANFILES = $(bin_SCRIPTS)

EXTRA_DIST = autogen.sh
