#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([general-tools],[1.3.0],[https://github.com/devkitPro/general-tools/issues])
AC_CONFIG_SRCDIR([bin2s.c])
AC_CONFIG_FILES([generate_compile_commands], [chmod +x generate_compile_commands])
AM_INIT_AUTOMAKE([1.10])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
